added edit button so user caan edit their own post

--- a/17/views/profile.ejs
+++ b/17/views/profile.ejs
@@ -52,7 +52,7 @@
         <a href="/like/<%= post._id%>">
             <%= user && post.likes.includes(user._id) ? 'Unlike' : 'Like' %>
         </a>
-        <!-- <a href="#">Edit</a> -->
+  <a href="/edit/<%= post._id %>">Edit</a>   <!-- ✅ correct -->
       </div>
     </div>
   <% }) %>
